<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding1"
    android:layoutDirection="rtl"
    tools:context=".views.Onboarding2Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/skip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="#00A5A5A5"
                android:fontFamily="@font/din_next_arabic_regular"
                android:text="@string/skip"
                android:textColor="@color/Green_Mint"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="350dp"
            android:adjustViewBounds="true"
            android:src="@drawable/layer2"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/din_next_arabic_regular"
                android:text="@string/txt1"
                android:textColor="@color/Green_Mint"
                android:textSize="50sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/din_next_arabic_regular"
                android:text="@string/paragraph2"
                android:textSize="24sp" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>